--- a/style.less
+++ b/style.less
@@ -12,13 +12,21 @@
 @height: 150px;
 @square_width: 84%;
 @column_width: 13%;
-@circle_radius: 3px;
+@circle_radius: 5px;
+@circle_border_size: 2px;
 @circle_color: rgba(255, 255, 255, 0.9);
-@selector_color: rgba(255, 255, 255, 0.9);
+@selector_color: rgba(0, 0, 0, 0.5);
 @bg_color: white;
+@pointer_cursor: crosshair;
+@selector_cursor: ns-resize;
+
+body.unselectable {
+  .user-select(none);
+}
 
 .picker {
-  position:absolute;
+  display: none;
+  position: absolute;
   width: @width;
   height: @height;
   border: 1px solid gray;
@@ -26,32 +34,32 @@
   padding: 5px;
   background-color: @bg_color;
   .color-map {
-    cursor: pointer;
+    cursor: @pointer_cursor;
     position: relative;
     width: @square_width;
     height: 100%;
     float: left;
+    overflow: hidden;
     .background-image(linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(0, 0, 0, 1)), linear-gradient(to right, rgba(255, 0, 0, 1) 0%, rgba(255, 255, 0, 1), rgba(0, 255, 0, 1), rgba(0, 255, 255, 1), rgba(0, 0, 255, 1), rgba(255, 0, 255, 1), rgba(255, 0, 0, 1)));
     .pointer {
       height: @circle_radius*2;
       width: @circle_radius*2;
-      margin-top: -@circle_radius;
-      margin-left: -@circle_radius;
-      border: 2px solid @circle_color;
-      .border-radius(@circle_radius);
+      margin: -@circle_radius;
+      border: @circle_border_size solid @circle_color;
+      .border-radius(@circle_radius*2);
+      .box-sizing(border-box);
       position: absolute;
       pointer-events: none;
-      //top: 0%;
-      //left: 0%;
     }
   }
   .saturation {
     position: relative;
-    cursor: pointer;
+    cursor: @selector_cursor;
     width: @column_width;
     height: 100%;
     margin-left: 100% - @square_width - @column_width;
     float: left;
+    overflow: hidden;
     .background-image(linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(255, 255, 255, 1)));
     background-color: red;
     .selector {
@@ -59,7 +67,8 @@
       width: 100%;
       height: 1px;
       background-color: @selector_color;
-      box-sizing: border-box;
+      .box-sizing(border-box);
+      pointer-events: none;
     }
   }
 }
