--- a/style.less
+++ b/style.less
@@ -52,7 +52,7 @@ body.unselectable {
       pointer-events: none;
     }
   }
-  .saturation {
+  .column {
     position: relative;
     cursor: @selector_cursor;
     width: @column_width;
