--- a/style.less
+++ b/style.less
@@ -33,14 +33,13 @@ body.unselectable {
   .box-sizing('border-box');
   padding: 5px;
   background-color: @bg_color;
-  .color-map {
+  .map {
     cursor: @pointer_cursor;
     position: relative;
     width: @square_width;
     height: 100%;
     float: left;
     overflow: hidden;
-    .background-image(linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(0, 0, 0, 1)), linear-gradient(to right, rgba(255, 0, 0, 1) 0%, rgba(255, 255, 0, 1), rgba(0, 255, 0, 1), rgba(0, 255, 255, 1), rgba(0, 0, 255, 1), rgba(255, 0, 255, 1), rgba(255, 0, 0, 1)));
     .pointer {
       height: @circle_radius*2;
       width: @circle_radius*2;
@@ -60,8 +59,6 @@ body.unselectable {
     margin-left: 100% - @square_width - @column_width;
     float: left;
     overflow: hidden;
-    .background-image(linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(255, 255, 255, 1)));
-    background-color: red;
     .selector {
       position: absolute;
       width: 100%;
@@ -69,6 +66,11 @@ body.unselectable {
       background-color: @selector_color;
       .box-sizing(border-box);
       pointer-events: none;
+    }
+  }
+  &.hsv {
+    .column {
+      .background-image(linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(255, 255, 255, 1)));
     }
   }
 }
