improve input color manualy fix bug with col selector in style add rgb to hsv converter

--- a/style.less
+++ b/style.less
@@ -58,7 +58,7 @@ body.unselectable {
     height: 100%;
     margin-left: 100% - @square_width - @column_width;
     float: left;
-    overflow: hidden;
+    //overflow: hidden;
     .selector {
       position: absolute;
       width: 100%;
