bugfix and improvements add z-index to picker improve behavior of jquery plugin code fix example code

--- a/colorpicker.css
+++ b/colorpicker.css
@@ -15,6 +15,7 @@ body.unselectable {
   box-sizing: 'border-box';
   padding: 5px;
   background-color: #ffffff;
+  z-index: 10000;
 }
 .picker .map {
   cursor: crosshair;
